--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>site</title>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <p>kaketsu</p>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
