--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<p>kaketsu</p>
+<p id="top">KAKETSU GAME</p><dr><dr>
+<canvas id="game"></canvas>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
