--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+<center>
 <p id="top">KAKETSU GAME</p><dr><dr>
 <canvas id="game"></canvas>
 <script type="text/javascript" src="script.js"></script>
+</center>
 </body>
 </html>
