--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <center>
 <p id="top">KAKETSU GAME</p><dr><dr>
-<canvas id="game"></canvas>
+<canvas id="canvas"></canvas>
 <script type="text/javascript" src="script.js"></script>
 </center>
 </body>
