--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>site</title>
+<title>KAKETSU GAME</title>
 <link rel="stylesheet" type="text/css" href="style.css">
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.0.1/pixi.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/TweenMax.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/plugins/PixiPlugin.min.js"></script>
 </head>
 <body>
 <center>
 <p id="top">KAKETSU GAME</p><dr><dr>
-<canvas id="canvas" width="450" height="800"></canvas>
+<main id="app"></main>
 <script type="text/javascript" src="script.js"></script>
 </center>
 </body>
