--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 <body>
 <center>
-<p id="top">KAKETSU GAME</p><dr><dr>
+<p id="top">［あらすじ］<br>脱走するかけつを止めろ！</p><dr><dr>
 <main id="app"></main>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="script.js"></script><br><br><br>
+<p id="top">［ルール］<br>かけつが画面端に付いたらGAME OVER</p>
 </center>
 </body>
 </html>
