--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <center>
 <p id="top">［あらすじ］<br>脱走するかけつを止めろ！</p><dr><dr>
-<main id="app"></main>
+<div id="app"></div>
 <script type="text/javascript" src="script.js"></script><br><br><br>
 <p id="top">［ルール］<br>かけつが画面端に付いたらGAME OVER</p>
 </center>
