--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
 <center>
 <p id="top">［あらすじ］<br>脱走するかけつを止めろ！</p><dr><dr>
-<div id="app"><p id="top">［ルール］<br>かけつが画面端に付いたらGAME OVER</p></div>
+<div id="app"></div><br>
+<p id="top">［ルール］<br>かけつが画面端に付いたらGAME OVER</p>
 <script type="text/javascript" src="script.js"></script>
 </center>
 </body>
