--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/plugins/PixiPlugin.min.js"></script>
 </head>
 <body>
-<center>
-<p id="top">［あらすじ］<br>脱走するかけつを止めろ！</p><dr><dr>
-<div id="app"></div><br>
-<p id="top">［ルール］<br>かけつが画面端に付いたらGAME OVER</p>
+<center><table><tr><td>
+<p id="top">［あらすじ］<br>脱走するかけつを止めろ！</p></td><td>
+<div id="app"> </div></td><td>
+<p id="top">［ルール］<br>かけつが画面端に付いたらGAME OVER</p></td></tr></table>
 <script type="text/javascript" src="script.js"></script>
 </center>
 </body>
