--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 <center><table><tr><td>
-<p id="top">［あらすじ］<br>脱走するかけつを止めろ！</p></td><td>
-<div id="app"> </div></td><td>
+<p id="top">［あらすじ］<br>脱走するかけつを止めろ！</p></td></tr><tr><td>
+<div id="app"> </div></td></tr><tr><td>
 <p id="top">［ルール］<br>かけつが画面端に付いたらGAME OVER</p></td></tr></table>
 <script type="text/javascript" src="script.js"></script>
 </center>
