--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <center><table><tr><td>
 <p id="top">［あらすじ］<br>脱走するかけつを止めろ！</p></td></tr><tr><td>
 <div id="app"> </div></td></tr><tr><td>
-<div id="score"> </id></td></tr><tr><td>
+<div id="score"> </div></td></tr><tr><td>
 <p id="top">［ルール］<br>かけつが画面端に付いたらGAME OVER</p></td></tr></table>
 <script type="text/javascript" src="script.js"></script>
 </center>
